# juce-conan-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.plugin_name }}/: .clang-format  CMakeLists.txt  Makefile  README.md  conanfile.txt
{{ cookiecutter.plugin_name }}/cmake/: {{ cookiecutter.plugin_name }}Conan.cmake  {{ cookiecutter.plugin_name }}Plugin.cmake
{{ cookiecutter.plugin_name }}/conan-recipes/juce/: conandata.yml  conanfile.py
{{ cookiecutter.plugin_name }}/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
